tests/fail/fun_literal_return_expr.py
def f() -> 23:
    """ This function only returns 23"""
    return 20 + 3  # Return is incorrect, only + makes an int
